Implement S3 file deletion. Add tests. Lots of.